# self-driving-risk-predictor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/forecaster/: constant_velocity.yaml
configs/risk/: default.yaml
scripts/: run_pipeline.py
src/scene_risk/: __init__.py
src/scene_risk/forecasting/: CLAUDE.md  base.py  constant_velocity.py  evaluation.py
src/scene_risk/pipeline/: CLAUDE.md  scene_pipeline.py
src/scene_risk/risk/: CLAUDE.md  assessor.py  levels.py  metrics.py
src/scene_risk/visualization/: CLAUDE.md  bev_renderer.py
tests/: CLAUDE.md  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_evaluation.py  test_extractor.py  test_forecaster.py  test_risk.py  test_visualization.py
